--- a/FORMATION JAVASCRIPT/INTRODUCTION.HTML
+++ b/FORMATION JAVASCRIPT/INTRODUCTION.HTML
@@ -7,5 +7,19 @@
 </head>
 <body>
 
+	<p>
+		Sur ce chapitre nous allons attauqer les variables et types de données
+	</p>
+	<ul>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+		<ol><strong></strong></ol>
+	</ul>
 </body>
 </html>
