--- a/FORMATION JAVASCRIPT/INTRODUCTION.HTML
+++ b/FORMATION JAVASCRIPT/INTRODUCTION.HTML
@@ -11,7 +11,7 @@
 		Sur ce chapitre nous allons attauqer les variables et types de données
 	</p>
 	<ul>
-		<ol><strong></strong></ol>
+		<ol><strong>Let , Const, Var sont les mot clé en JS qui nous permet de déclarer des variables</strong></ol>
 		<ol><strong></strong></ol>
 		<ol><strong></strong></ol>
 		<ol><strong></strong></ol>
